@@ -74,24 +74,35 @@ static object get_metafile_base(void)
 }
 
 /* width and height are in mm */
-metafile newmetafile(const char *name, double width, double height)
+metafile newmetafile(const char *name, double width, double height, double xpinch, double ypinch)
 {
     metafile obj;
     HDC hDC;
     RECT wr;
     static double cppix = -1, ppix, cppiy, ppiy;
 
-    /*
-     * In theory, (cppix=ppix) and (cppiy=ppiy). However, we
-     * use the ratio to adjust the 'reference dimension'
-     * in case.... ("Importing graph in MsWord" thread)
-     */
-    if (cppix < 0)
+    /* If user has overridden, do not query Windows for device info */
+    if (xpinch > 0.0 && ypinch > 0.0)
     {
-        cppix = 25.40 * devicewidth(NULL) / devicewidthmm(NULL);
-        ppix = 100 * devicepixelsx(NULL);
-        cppiy = 25.40 * deviceheight(NULL) / deviceheightmm(NULL);
-        ppiy = 100 * devicepixelsy(NULL);
+        cppix = xpinch;
+        ppix = 100 * xpinch;
+        cppiy = ypinch;
+        ppiy = 100 * ypinch;
+    }
+    else
+    {
+        /*
+         * In theory, (cppix=ppix) and (cppiy=ppiy). However, we
+         * use the ratio to adjust the 'reference dimension'
+         * in case.... ("Importing graph in MsWord" thread)
+         */
+        if (cppix < 0)
+        {
+            cppix = 25.40 * devicewidth(NULL) / devicewidthmm(NULL);
+            ppix = 100 * devicepixelsx(NULL);
+            cppiy = 25.40 * deviceheight(NULL) / deviceheightmm(NULL);
+            ppiy = 100 * devicepixelsy(NULL);
+        }
     }
     /* This is all very peculiar. We would really like to create
        a metafile measured in some sensible units, but it seems
