@@ -70,22 +70,14 @@ extern size_t Rf_utf8towcs(wchar_t *wc, const char *s, size_t n);
 static Rboolean GADeviceDriver(pDevDesc dd, const char *display, double width, double height, double pointsize,
                                Rboolean recording, int resize, int bg, int canvas, double gamma, int xpos, int ypos,
                                Rboolean buffered, SEXP psenv, Rboolean restoreConsole, const char *title,
-                               Rboolean clickToConfirm, Rboolean fillOddEven, const char *family, int quality);
+                               Rboolean clickToConfirm, Rboolean fillOddEven, const char *family, int quality,
+                               double xpinch, double ypinch);
 
 /* a colour used to represent the background on png if transparent
    NB: used as RGB and BGR
 */
 
 #define PNG_TRANS 0xfdfefd
-
-/* these really are globals: per machine, not per window */
-static double user_xpinch = 0.0, user_ypinch = 0.0;
-
-static void GAsetunits(double xpinch, double ypinch)
-{
-    user_xpinch = xpinch;
-    user_ypinch = ypinch;
-}
 
 static rgb GArgb(int color, double gamma)
 {
@@ -368,7 +360,7 @@ static void SaveAsWin(pDevDesc dd, const char *display, Rboolean restoreConsole)
                        fromDeviceHeight(toDeviceHeight(-1.0, GE_NDC, gdd), GE_INCHES, gdd),
                        ((gadesc *)dd->deviceSpecific)->basefontsize, 0, 1, White, White, 1, NA_INTEGER, NA_INTEGER,
                        FALSE, R_GlobalEnv, restoreConsole, "", FALSE, ((gadesc *)dd->deviceSpecific)->fillOddEven, "",
-                       DEFAULT_QUALITY))
+                       DEFAULT_QUALITY, 0.0, 0.0))
         PrivateCopyDevice(dd, ndd, display);
 }
 
@@ -1649,12 +1641,12 @@ static Rboolean setupScreenDevice(pDevDesc dd, gadesc *xd, double w, double h, R
     char buf[100];
 
     xd->kind = SCREEN;
-    if (R_FINITE(user_xpinch) && user_xpinch > 0.0)
-        dw = dw0 = (int)(w * user_xpinch);
+    if (xd->xpinch > 0.0)
+        dw = dw0 = (int)(w * xd->xpinch);
     else
         dw = dw0 = (int)(w / pixelWidth(NULL));
-    if (R_FINITE(user_ypinch) && user_ypinch > 0.0)
-        dh = (int)(h * user_ypinch);
+    if (xd->ypinch > 0.0)
+        dh = (int)(h * xd->ypinch);
     else
         dh = (int)(h / pixelHeight(NULL));
 
@@ -2067,7 +2059,7 @@ static Rboolean GA_Open(pDevDesc dd, gadesc *xd, const char *dsp, double w, doub
         snprintf(buf, 600, xd->filename, 1);
         xd->w = MM_PER_INCH * w;
         xd->h = MM_PER_INCH * h;
-        xd->gawin = newmetafile(buf, MM_PER_INCH * w, MM_PER_INCH * h);
+        xd->gawin = newmetafile(buf, MM_PER_INCH * w, MM_PER_INCH * h, xd->xpinch, xd->ypinch);
         xd->kind = METAFILE;
         xd->fast = 0; /* use scalable line widths */
         if (!xd->gawin)
@@ -2343,7 +2335,7 @@ static void GA_NewPage(const pGEcontext gc, pDevDesc dd)
         {
             del(xd->gawin);
             snprintf(buf, 600, xd->filename, xd->npage);
-            xd->gawin = newmetafile(buf, xd->w, xd->h);
+            xd->gawin = newmetafile(buf, xd->w, xd->h, xd->xpinch, xd->ypinch);
             if (!xd->gawin)
                 error(_("metafile '%s' could not be created"), buf);
         }
@@ -3683,7 +3675,8 @@ static void GA_releaseMask(SEXP ref, pDevDesc dd)
 static Rboolean GADeviceDriver(pDevDesc dd, const char *display, double width, double height, double pointsize,
                                Rboolean recording, int resize, int bg, int canvas, double gamma, int xpos, int ypos,
                                Rboolean buffered, SEXP psenv, Rboolean restoreConsole, const char *title,
-                               Rboolean clickToConfirm, Rboolean fillOddEven, const char *family, int quality)
+                               Rboolean clickToConfirm, Rboolean fillOddEven, const char *family, int quality,
+                               double xpinch, double ypinch)
 {
     /* if need to bail out with some sort of "error" then */
     /* must free(dd) */
@@ -3701,6 +3694,15 @@ static Rboolean GADeviceDriver(pDevDesc dd, const char *display, double width, d
 
     /* from here on, if need to bail out with "error", must also */
     /* free(xd) */
+
+    /* Allow user override of ppi */
+    xd->xpinch = 0.0;
+    xd->ypinch = 0.0;
+    if (R_FINITE(xpinch) && xpinch > 0.0 && R_FINITE(ypinch) && ypinch > 0.0)
+    {
+        xd->xpinch = xpinch;
+        xd->ypinch = ypinch;
+    }
 
     ps = pointsize;
     if (ps < 1)
@@ -3839,12 +3841,12 @@ static Rboolean GADeviceDriver(pDevDesc dd, const char *display, double width, d
 
     if (xd->kind <= METAFILE)
     { /* non-screen devices set NA_real_ */
-        if (R_FINITE(user_xpinch) && user_xpinch > 0.0)
-            dd->ipr[0] = 1.0 / user_xpinch;
+        if (xd->xpinch > 0.0)
+            dd->ipr[0] = 1.0 / xd->xpinch;
         else
             dd->ipr[0] = pixelWidth(xd->gawin);
-        if (R_FINITE(user_ypinch) && user_ypinch > 0.0)
-            dd->ipr[1] = 1.0 / user_ypinch;
+        if (xd->ypinch > 0.0)
+            dd->ipr[1] = 1.0 / xd->ypinch;
         else
             dd->ipr[1] = pixelHeight(xd->gawin);
     }
@@ -4253,10 +4255,9 @@ SEXP devga(SEXP args)
         /* Allocate and initialize the device driver data */
         if (!(dev = (pDevDesc)calloc(1, sizeof(DevDesc))))
             return 0;
-        GAsetunits(xpinch, ypinch);
         if (!GADeviceDriver(dev, display, width, height, ps, (Rboolean)recording, resize, bg, canvas, gamma, xpos, ypos,
                             (Rboolean)buffered, psenv, restoreConsole, title, clickToConfirm, fillOddEven, family,
-                            quality))
+                            quality, xpinch, ypinch))
         {
             free(dev);
             error(_("unable to start %s() device"), type);
